backend: add financial